--- a/MvcThrottle/MvcThrottle.csproj
+++ b/MvcThrottle/MvcThrottle.csproj
@@ -73,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheRepository.cs" />
+    <Compile Include="IpAddressParser.cs" />
+    <Compile Include="IIpAddressParser.cs" />
     <Compile Include="IPAddressRange.cs" />
     <Compile Include="IThrottleLogger.cs" />
     <Compile Include="IThrottleRepository.cs" />
