--- a/MvcThrottle/MvcThrottle.nuspec
+++ b/MvcThrottle/MvcThrottle.nuspec
@@ -1,14 +1,15 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <version>1.0.0</version>
+    <version>$version$</version>
     <authors>Stefan Prodan</authors>
     <owners>Stefan Prodan</owners>
     <id>MvcThrottle</id>
-    <title>ASP.NET MVC Throttling Filter</title>
+    <title>ASP.NET MVC Rate Limiter</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>MvcThrottle filter is designed for controlling the rate of requests that clients can make to a website based on IP address, request route and client identity. You can set multiple limits for different scenarios like allowing an IP to make a maximum number of calls per second, per minute, per hour or per day. You can define these limits to address all requests made to your website or you can scope the limits to each Controller, Action or URL, with or without query string params.</description>
-    <copyright>Stefan Prodan 2014</copyright>
+	<releaseNotes>If you are looking for the ASP.NET Core version please use AspNetCoreRateLimit package</releaseNotes>
+    <copyright>Stefan Prodan 2014-2017</copyright>
     <tags>ASP.NET MVC, throttling, rate limits</tags>
     <projectUrl>https://github.com/stefanprodan/MvcThrottle</projectUrl>
     <language>en-US</language>
@@ -16,10 +17,4 @@
       <dependency id="Microsoft.AspNet.Mvc" version="5.1.0" />
     </dependencies>
   </metadata>
-  <files>
-    <file src="..\MvcThrottle\bin\Release\MvcThrottle.dll" target="lib\net45" />
-    <file src="..\MvcThrottle\bin\Release\MvcThrottle.xml" target="lib\net45" />
-    <file src="..\MvcThrottle\bin\Release\MvcThrottle.pdb" target="lib\net45" />
-    <file src="..\MvcThrottle\**\*.cs" target="src" />
-  </files>
 </package>
